--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
 @import "./reset";
+@import"confing/colors";
 @import"./messages";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
+@import"./user";
+@import"./flash";
