--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,14 +4,14 @@
     .side-bar__user-name__top-items
       
       %p.side-bar__user-name__top-items__name
-        masa
+        = current_user.name
       %ul.side-bar__user-name__top-items__icons
         %li.side-bar__user-name__top-items__edit
-          =link_to "#" do
-            =icon('fas','edit')
+          =link_to  do
+            =icon('fas','pen-square',class:'icon')
         %li.side-bar__user-name__top-items__cog   
-          =link_to "#" do
-            =icon('fas','cog')
+          =link_to edit_user_path(current_user) do
+            =icon('fas','cog',class:'icon')
       
   .side-bar__group
     =link_to "#",class:"side-bar__group__list" do
