--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,9 @@
 @import "./reset";
-@import"confing/colors";
-@import"./messages";
+@import "colors";
+@import "./flash";
+@import "./messages";
+@import "./user";
 @import "font-awesome-sprockets";
-@import "./font-awesome";
-@import"./user";
-@import"./flash";
+@import "font-awesome";
+@import "./group";
+
