--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -3,7 +3,7 @@
     .account-page__inner--left.account-page__header
       %h2 Edit Account
       %h5 アカウントの編集
-      = link_to "ログアウト", destoroy_user_session_path,method:delete, class: 'btn'
+      %i.btn ログアウト
       = link_to "トップページに戻る", :back, class: 'btn'
     .account-page__inner--right.user-form
       = form_for(current_user) do |f|
@@ -19,3 +19,4 @@
             = f.email_field :email
         .actions
           = f.submit "Update", class: 'btn'
+
