--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,12 +1,17 @@
+.messages
+  =render @messages
+
 .chat-main
   .chat-main__message-info
     .chat-main__message-info__group
       %p.chat-main__message-info__group__text
-        test
-      %p.chat-main__message-info__group__member
-        member:masa
+        = @group.name
+      - @group.users.each do |user|
+        %p.chat-main__message-info__group__member
+          = user.name
+          
     .chat-main__message-info__edit
-      =link_to "#" do
+      =link_to edit_group_path(current_user) do
         Edit
 
   .chat-main__message-list
@@ -25,11 +30,11 @@
     .chat-main__message-list__texts
       今日は夜から雨
 
-  .chat-main__message-form
-    %form.new_message
-      .input-box
-        %input{type:"text",class:"input-box__text",placeholder:"type a message"}
-        %label{class: "input-box__image"}
-          = icon('fas', 'image')
-          %input{type: "file",class:"input-box__image__file"}
-      %input{type:"submit",class:"submit-btn",value:"Send"}
+  .form
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+      .form__mask
+        = f.label :image, class: 'form__mask__image' do
+          = icon('fas', 'image', class: 'icon') 
+          = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
