--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -14,9 +14,10 @@
             =icon('fas','cog',class:'icon')
       
   .side-bar__group
-    =link_to "#",class:"side-bar__group__list" do
-      .side-bar__group__list
-        %p.side-bar__group__list__name
-          techcamp
-        %p.side-bar__group__list__message
-          まだメッセージがありません
+    - current_user.groups.each do |group|
+      .group
+        = link_to group_messages_path(group) do
+          .group__name
+            = group.name
+          .group__message
+            = group.show_last_message
