--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -37,26 +37,26 @@
     }
   }
  
-  &__group{
+  .groups{
     background-color: #2f3e51; 
     width: 300px;
     height: calc(100vh - 100px);
     padding: 20px 20px 0;
     
-    &__list{
+    .group{
       color: white;
       margin-bottom: 40px;
       text-decoration: none;
-
       &__name{
         font-size: 15px;
-        margin-bottom: 5px;
+        margin: 0,0,5;
       }
-
       &__message{
-        font-size:11px
+        font-size: 11px;
+
       }
-      }
+     
+    }
   }
 }
 
