--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -13,10 +13,11 @@
           =link_to edit_user_path(current_user) do
             =icon('fas','cog',class:'icon')
       
-  .side-bar__group
-    =link_to "#",class:"side-bar__group__list" do
-      .side-bar__group__list
-        %p.side-bar__group__list__name
-          techcamp
-        %p.side-bar__group__list__message
-          まだメッセージがありません
+  .groups
+    - current_user.groups.each do |group|
+      .group
+        = link_to '#' do
+          %P.group__name
+            = group.name
+          %p.group__message
+            メッセージはまだありません。
