--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -46,15 +46,22 @@
     .group{
       color: white;
       margin-bottom: 40px;
-      text-decoration: none;
+      
+
       &__name{
         font-size: 15px;
         margin: 0,0,5;
+        color: white;
       }
       &__message{
         font-size: 11px;
-
+        color: white;
       }
+      a{
+          text-decoration: none;
+        }
+
+      
      
     }
   }
@@ -153,43 +160,47 @@
       }
     }
  }
-  &__message-form{
-    background-color: #d2d2d2;
-    width: calc(100vw - 300px);
+ 
+  .form{
     height: 90px;
+    background-color: #d2d2d2;
     padding: 20px 40px;
-
+  
     form{
-      display: flex;
+      display: flex; 
       .input-box{
+
         display: flex;
         width: 100%;
         position: relative;
-
         &__text{
           height: 50px;
-          padding: 0 40px 0 10px;
           width: 100%;
-          border-style:none;
-      }
+          color: #434a54;
+          border-style: none;
+          padding: 0 40px 0;
+          }
         &__image{
           position: absolute;
           top: 10px;
           right: 10px;
           cursor: pointer;
+          font-size: 1.3rem;
+
           &__file{
             display: none;
+            }
           }
-      }
-      }
-      }
-
+        }
+        
       .submit-btn{
+        width: 100px;
         height: 50px;
         padding: 0 30px;
         margin-left: 15px;
         color: white;
         background-color: #38aef0;
-    }
-    }
- }
+      }
+  }
+}
+}
