--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -13,7 +13,7 @@
           =link_to edit_user_path(current_user) do
             =icon('fas','cog',class:'icon')
       
-  .side-bar__group
+  .groups
     - current_user.groups.each do |group|
       .group
         = link_to group_messages_path(group) do
