--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,6 +1,3 @@
-.messages
-  = render @messages
-
 .chat-main
   .chat-main__message-info
     .chat-main__message-info__group
@@ -13,29 +10,14 @@
     .chat-main__message-info__edit
       =link_to edit_group_path(current_user) do
         Edit
-
-  .chat-main__message-list
-    .chat-main__message-list__one
-      %p.chat-main__message-list__one__name
-        masa
-      %p.chat-main__message-list__one__date
-        2019/11/20(Wed) 17:43:01
-    .chat-main__message-list__text
-      おはよう！
-    .chat-main__message-list__two
-      %p.chat-main__message-list__two__names
-        masa
-      %p.chat-main__message-list__two__dates
-        2019/11/20(Wed) 17:43:34
-    .chat-main__message-list__texts
-      今日は夜から雨
+  .messages
+    = render @messages
 
   .form
-    %form.new_message
-      .input-box
-        %input{type: "text", class: "input-box__text", placeholder: "type a message"}
-        %label{class: "input-box__image"}
-          =icon('fas', 'image')
-          %input{type: "file", class: "input-box__image__file"}
-      %input{type: "submit", class: "submit-btn"}
-      
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+      .form__mask
+        = f.label :image, class: 'form__mask__image' do
+          = icon('fas', 'image', class: 'icon')
+          = f.file_field :image, class: 'hidden'
+      = f.submit 'Send', class: 'form__submit'
