--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -10,7 +10,7 @@
             = user.name
           
     .chat-main__message-info__edit
-      =link_to edit_group_path(current_user) do
+      =link_to edit_group_path(@group) do
         Edit
   .messages
     = render @messages
